# gaia-mnemosyne

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
backend/: Cargo.toml  README.md  build.rs
backend/benches/: Cargo.toml  README.md  basic_bench.rs
backend/benches/src/: lib.rs
backend/crates/api/: Cargo.toml  README.md
backend/crates/api/src/: config.rs  lib.rs  openapi.rs  server.rs
backend/crates/api/src/handlers/: context_query.rs  docs_clusters.rs  error.rs  graph_debug.rs  graph_expand.rs  graph_node.rs  graph_snapshot.rs  health.rs  ingestion_metrics.rs  jobs_create.rs  jobs_list.rs  jobs_run.rs  metrics.rs  metrics_basic.rs  mod.rs  providers_list.rs  rag_debug.rs  rag_handler.rs  rag_metadata.rs  rag_query.rs  rag_test.rs  reindex.rs  version.rs
backend/crates/api/src/mcp/: mod.rs  router.rs
backend/crates/api/src/middleware/: rate_limiter.rs
backend/crates/api/src/models/: context_request.rs  context_response.rs  mod.rs
backend/crates/api/src/routes/: mod.rs
backend/crates/api/src/ws/: all_ws.rs  graph_ws.rs  hub.rs  jobs_ws.rs  logs_ws.rs  mod.rs  rag_ws.rs  status_ws.rs
backend/crates/cli/: Cargo.toml  README.md
backend/crates/cli/src/: main.rs
backend/crates/core/: Cargo.toml  README.md
backend/crates/core/src/: error.rs  jobs.rs  lib.rs  logging.rs  mnemosyne.rs  rag_session.rs  ws.rs
backend/crates/core/src/config/: ingestion_profile.rs  mod.rs  namespace.rs  profile_loader.rs  providers.rs
backend/crates/core/src/graph/: mod.rs
backend/crates/core/src/metrics/: mod.rs
backend/crates/core/src/models/: chunk.rs  document.rs  graph_nodes.rs  job.rs  mod.rs  query_plan.rs  rag_context.rs
backend/crates/core/src/ontology/: rules.rs
backend/crates/core/src/rag/: api.rs  assembler.rs  cache.rs  clustering.rs  keyword.rs  mod.rs  orchestrator.rs  query_preprocessor.rs  strategy.rs
backend/crates/core/src/ranking/: profile.rs
backend/crates/core/src/search/: keyword_search_default.rs  mod.rs
backend/crates/core/src/traits/: cache_store.rs  graph_store.rs  keyword_search.rs  metadata_store.rs  mod.rs  ontology_engine.rs  ranking_engine.rs  vector_search.rs  vector_store.rs
backend/crates/core/src/utils/: mod.rs  text_normalizer.rs
backend/crates/inference/: Cargo.toml  README.md
backend/crates/inference/src/: embedding_engine.rs  error.rs  lib.rs  model_router.rs  traits.rs
backend/crates/inference/src/engines/: mod.rs  proxy.rs  tensorzero.rs  tensorzero_embed.rs
backend/crates/ingest/: Cargo.toml  README.md
backend/crates/ingest/src/: controller.rs  datasource.rs  dispatcher.rs  fs_ingest_runner.rs  job_runner.rs  lib.rs  metrics.rs  runner.rs
backend/crates/ingest/src/jobs/: mod.rs
backend/crates/ingest/src/pipeline/: chunk_builder.rs  chunk_step.rs  data.rs  embedding_step.rs  executor.rs  fingerprint_step.rs  graph_builder_step.rs  mod.rs  ontology_step.rs  registry.rs  step.rs  vector_upsert_step.rs
backend/crates/ingest/src/providers/: docx.rs  filesystem.rs  github.rs  mod.rs  openapi.rs  pdf.rs  registry.rs
backend/crates/ingest/src/workers/: mod.rs
backend/crates/scheduler/: Cargo.toml  README.md
backend/crates/scheduler/src/: lib.rs  runner.rs
backend/crates/scheduler/src/queue/: mod.rs
backend/crates/scheduler/src/tasks/: mod.rs
backend/crates/storage/: Cargo.toml  README.md
backend/crates/storage/src/: lib.rs  postgres_pool.rs  surreal_rpc_client.rs  surreal_store.rs
backend/crates/storage/src/cache/: embedding_cache.rs  mod.rs  redis.rs
backend/crates/storage/src/graph/: graph_engine.rs  mod.rs  query_engine.rs  surreal.rs
backend/crates/storage/src/metadata/: mod.rs  postgres.rs  postgres_pool.rs  sqlite.rs
backend/crates/storage/src/redis/: mod.rs
backend/crates/storage/src/vector/: mod.rs  qdrant.rs  router.rs  search_engine.rs  vector_engine.rs
backend/crates/test-utils/: Cargo.toml  README.md
backend/crates/test-utils/src/: fake_inference_engine.rs  fake_vector_store.rs  fixtures.rs  lib.rs  test_pipeline_builder.rs
backend/migrations/postgres/: 0001_full_schema.sql
backend/tests/: Cargo.toml
backend/tests/e2e/: README.md  basic_flow_test.rs  rag_e2e_placeholder.rs
backend/tests/fixtures/: README.md
backend/tests/integration/: README.md  api_integration_test.rs  fixture_and_fake_engines.rs
backend/tests/llm/: chat_configured.rs  chat_qwen3.rs  embedding_configured.rs  embedding_qwen3.rs
backend/tests/unit/: README.md  core_tests.rs  inference_tests.rs  pipeline_builder_tests.rs  storage_tests.rs  vector_store_tests.rs
config/profiles/: airgap.yaml  default.yaml  gai.yaml
docs/infra/: llm.md  ollama-local-llm.md  tensorzero-setup.md  tensorzero.md
infra/tensorzero/: Dockerfile  tensorzero.yaml
ops/: README.md  docker-compose.dev.yml  otel-collector.yaml
ops/scripts/: init.sh  pre-commit.sh
ops/tensorzero-config/: tensorzero.toml
scripts/: check-ollama-llm.sh  check-tensorzero.sh  run-tensorzero-local.sh  start_ollama.sh
ui/: README.md  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  index.css  router.tsx
ui/src/api/: client.ts  graph.ts  jobs.ts  ws.ts
ui/src/components/: AlertsWidget.tsx  ChunkDetailsModal.tsx  ContentContainer.tsx  GraphPanel.tsx  JobDetailsModal.tsx  JobProgressBar.tsx  JobStatusBadge.tsx  JobTimeline.tsx  JobTypeBadge.tsx  JobsTimeline.tsx  Layout.tsx  LogsDrawer.tsx  MnemoCard.tsx  MnemoChunkCard.tsx  MnemoCollapse.tsx  MnemoGraphLegend.tsx  MnemoGrid.tsx  MnemoLoader.tsx  MnemoLogo.tsx  MnemoModal.tsx  MnemoSection.tsx  MnemoSkeleton.tsx  MnemoStatusBadge.tsx  MnemoStatusCard.tsx  MnemoStatusIcon.tsx  MnemoTable.tsx  MnemoTabs.tsx  MnemoToast.tsx  MnemoTooltip.tsx  NodeDetailsModal.tsx  PageTitle.tsx  PageTransition.tsx  RAGActivityWidget.tsx  RagDebugPanel.tsx  SideNav.tsx  SystemBanner.tsx
ui/src/context/: AppStateContext.tsx  WSContext.tsx  index.ts
ui/src/pages/: Dashboard.tsx  GraphExplorer.tsx  PipelineMonitor.tsx  RAGPlayground.tsx  Sources.tsx  SystemStatus.tsx
ui/src/styles/: typography.css
(+3 files in other folders)
