# Workspace configuration for Gaia Mnemosyne.
[workspace]
resolver = "3"
members = [
    "crates/api",
    "crates/core",
    "crates/ingest",
    "crates/scheduler",
    "crates/storage",
    "crates/inference",
    "crates/cli",
    "crates/test-utils",
    "tests",
    "benches",
    "bin/mnemo-api"
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
criterion = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.23"
opentelemetry-otlp = "0.16"
