# Placeholder manifest for mnemo-api crate.
[package]
name = "mnemo-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
mnemo-core = { path = "../core" }
tower-http = { version = "0.5", features = ["cors", "trace", "set-header"] }
tower = "0.4"
reqwest = { version = "0.12", default-features = true }
tokio = { version = "1", features = ["net", "sync"] }
redis = { version = "0.24", features = ["tokio-comp"] }
uuid = { version = "1", features = ["v4"] }
mnemo-ingest = { path = "../ingest" }
once_cell = "1.19"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "uuid"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.10"
bb8 = "0.8"
mnemo-storage = { path = "../storage" }
tracing = "0.1"
utoipa = { version = "4" }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
futures-util = "0.3"
surrealdb = { version = "2", default-features = false, features = ["protocol-ws"] }
