# Placeholder manifest for mnemo-core crate.
[package]
name = "mnemo-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0"
async-trait = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tracing = "0.1.30"
tokio = { version = "1", features = ["sync"] }
once_cell = "1.19"
redis = { version = "0.24", features = ["tokio-comp"] }
sha1 = "0.10"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
serde_yaml = "0.9"
regex = "1"
unicode-normalization = "0.1"
