# Placeholder manifest for mnemo-ingest crate.
[package]
name = "mnemo-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
mnemo-core = { path = "../core" }
mnemo-storage = { path = "../storage" }
reqwest = { version = "0.12", default-features = true }
serde_json = "1.0"
mnemo-inference = { path = "../inference" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
once_cell = "1.19"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
regex = "1"
serde_yaml = "0.9"
pdf-extract = "0.8"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
walkdir = "2"
