# Placeholder manifest for mnemo-storage crate.
[package]
name = "mnemo-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
mnemo-core = { path = "../core" }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
once_cell = "1.19"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.24", features = ["tokio-comp"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.10"
bb8 = "0.8"
tracing = "0.1"
# SurrealDB client (RPC over WebSocket)
surrealdb = { version = "2", default-features = false, features = ["protocol-ws"] }
